syntax = "proto3";

package edgemain;

message NetPacket {
    string Sender = 1;
    oneof Operation {
        SensorPayload sensor_payload = 100;
        Rs485ReadRequest read_request = 101;
        Rs485WriteRequest write_request = 102;
        Rs485Feedback feedback = 103;
    }
}

// Generic sensor payload message
message SensorPayload {
    string sensor_id = 1;
    string payload_type = 2;
    string timestamp = 3;
    optional double battery = 4;
    int32 event_count = 5;
    oneof sensor_payload {
        TempHumidityPayload temp_humidity = 10;
        BootPayload boot = 11;
        PulsePayload pulse = 12;
        MotionPayload motion = 13;
        SwitchPayload switch = 14;
        Rs485Response rs485_response = 15;
        Rs485Request rs485_request = 16;
    }
}

message MotionPayload {
    bool status = 1;
    int32 eventCount = 2;
}

message SwitchPayload {
    bool status = 1;
    int32 eventCount = 2;
}

message PulsePayload {
    bool status = 1;
    int32 eventCount = 2;
}

message BootPayload {
    string reason = 1;
}

// Sensor-specific message for temperature and humidity
message TempHumidityPayload {
    double temperature = 1;
    double humidity = 2;
    optional string adc_max = 3;
    optional string adc_in = 4;
}

message Rs485Request {
    string rs485 = 1;
}

message Rs485Response {
    string rs485 = 1;
    optional int32 actuator_value = 2;
    optional int32 co2_value = 3;
    optional double return_temperature = 4;

}

// Read request message
message Rs485ReadRequest {
    string target = 1;
    int32 device = 2;
    int32 address = 3;
    int32 numOfRegister = 4;
}

// Write request message
message Rs485WriteRequest {
    string target = 1;
    int32 device = 2;
    int32 address = 3;
    int32 valOrReg = 4;
}

// Feedback message
message Rs485Feedback {
    string message = 1;
}

service Greeter {

    // Server Streaming
	rpc StreamingMessage (RequestMessage) returns (stream ReplyMessage);


}

// The request message containing the user's name.
message RequestMessage {
  string message= 1;
}

// The response message containing the greetings.
message ReplyMessage {
  string message = 1;
}
